<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/s"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="1dp"
    android:elevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="5dp"
            android:background="@color/color_theme"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/albumCover"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/song_artwork"
                android:src="@drawable/img_song"
                app:shapeAppearanceOverlay="@style/ImageView.Corner.Round"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:text="@string/look_what_you_made_me_do"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/albumCover"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/artist"
                android:layout_width="wrap_content"
                android:maxWidth="150dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:text="@string/taylor_swift"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/delimiter"
                app:layout_constraintStart_toEndOf="@id/albumCover"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <TextView
                android:id="@+id/delimiter"
                android:contentDescription="@string/delimiter"
                android:text="@string/delimiter_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/artist"
                android:textColor="@color/white"
                android:paddingVertical="6dp"
                app:layout_constraintTop_toBottomOf="@id/name"/>

            <TextView
                android:id="@+id/album"
                android:layout_width="100dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:text="@string/reputation"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/delimiter"
                app:layout_constraintTop_toBottomOf="@id/name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>